--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
                 <h2>Чим ми займаємося</h2>
                 <ul>
                     <li>
-                        <img src="./images/box1.jpg" alt="Верстка сайтів"width="370">
+                        <img src="./images/box1.jpg" alt="Верстка сайтів" width="370">
                     </li>
                     <li>
-                        <img src="./images/box2.jpg" alt="Оптимізація веб сторіеки під мобільні пристрої"width="370>
+                        <img src="./images/box2.jpg" alt="Оптимізація веб сторіеки під мобільні пристрої" width="370">
                     </li>
                     <li>
-                        <img src="./images/box3.jpg" alt="Стилізація сторінки"width="370>
+                        <img src="./images/box3.jpg" alt="Стилізація сторінки" width="370">
                     </li>
                 </ul>
             
@@ -74,7 +74,7 @@
                 <h2>Наша команда</h2>
                 <ul>
                     <li>
-                        <img src="./images/Ihor.jpg"alt="Ігор Дем'яненко"width="270">
+                        <img src="./images/Ihor.jpg" alt="Ігор Дем'яненко" width="270">
                         <h3>Ігор Дем'яненко</h3>
                         <p>Product Designer</p>
                     </li>
@@ -96,3 +96,14 @@
                 </ul>
             </section>
     </main>
+    <!--Підвал-->
+    <footer>
+        <a href=""><img src="./images/logo.svg" alt=" логотип"></a>
+        <address>м.Київ,пр-т Лесі Українки,26</address>  
+         <ul>
+         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+    </footer>
+</body>
+</html>
