--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </section>
             <!--Features-->
             <section>
-                <h2 type="hidden">Переваги</h2>
+                <h2 hidden="true">Переваги</h2>
                 <ul>
                     <li>
                         <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
